Added some few lines

--- a/bird_classifier.ipynb
+++ b/bird_classifier.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#trene på png bildene"
+    "DIRECTORY = \"dataset\"\n",
+    "\n",
+    "CATEGORIES = [\"Gråspruv\", \"Grønnfink\", \"Grønnsisik\", \"Kråke\", \"Nøtteskrike\", \"Pilfink\"]"
    ]
   }
  ],
