--- a/bird_classifier.ipynb
+++ b/bird_classifier.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "DIRECTORY = \"dataset\"\n",
     "\n",
-    "CATEGORIES = [\"Gråspurv\", \"Grønnfink\", \"Grønnsisik\", \"Kråke\", \"Nøtteskrike\", \"Pilfink\", \"Fossekall\"]"
+    "CATEGORIES = [\"Gråspurv\", \"Grønnfink\", \"Grønnsisik\", \"Kråke\", \"Nøtteskrike\", \"Pilfink\", \"Fossekall\"]\n",
+    "#hallo"
    ]
   },
   {
