--- a/bird_classifier.ipynb
+++ b/bird_classifier.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-=======
-   "execution_count": 2,
->>>>>>> main
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,21 +30,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'dataset/Gråspruv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/andreaswergeland/git/bird__species_classification/bird_classifier.ipynb Cell 3'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/andreaswergeland/git/bird__species_classification/bird_classifier.ipynb#ch0000001?line=6'>7</a>\u001b[0m folder \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(DIRECTORY, category)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/andreaswergeland/git/bird__species_classification/bird_classifier.ipynb#ch0000001?line=7'>8</a>\u001b[0m label \u001b[39m=\u001b[39m CATEGORIES\u001b[39m.\u001b[39mindex(category)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/andreaswergeland/git/bird__species_classification/bird_classifier.ipynb#ch0000001?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mlistdir(folder):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/andreaswergeland/git/bird__species_classification/bird_classifier.ipynb#ch0000001?line=9'>10</a>\u001b[0m     img_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(folder, img)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/andreaswergeland/git/bird__species_classification/bird_classifier.ipynb#ch0000001?line=10'>11</a>\u001b[0m     img_arr \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mimread(img_path)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'dataset/Gråspruv'"
-=======
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2544,8 +2526,450 @@
       "Error: could not read image at dataset\\Nøtteskrike\\97136.png\n",
       "Error: could not read image at dataset\\Nøtteskrike\\97398.png\n",
       "Error: could not read image at dataset\\Nøtteskrike\\98825.png\n",
-      "Error: could not read image at dataset\\Nøtteskrike\\99481.png\n"
->>>>>>> main
+      "Error: could not read image at dataset\\Nøtteskrike\\99481.png\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n",
+      "It worked\n"
      ]
     }
    ],
@@ -2569,8 +2993,7 @@
     "        if img_arr is None:\n",
     "            print('Error: could not read image at', img_path)\n",
     "        else:\n",
-    "            print(\"It worked\")\n",
-    "            #data.append([img_arr, label])"
+    "            data.append([img_arr, label])"
    ]
   },
   {
@@ -2724,11 +3147,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2742,7 +3162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
