--- a/Convert_wav_nyversjon.ipynb
+++ b/Convert_wav_nyversjon.ipynb
@@ -17,7 +17,7 @@
     "audio_dir = '/Users/andreaswergeland/Downloads/dataset/audio'\n",
     "\n",
     "# Define the folder to process\n",
-    "folder_to_process = 'Fossekall'\n",
+    "folder_to_process = 'test'\n",
     "\n",
     "# Create output directory for spectrogram images\n",
     "output_dir = os.path.join('.', 'dataset', folder_to_process + '_spectrograms')\n",
@@ -54,11 +54,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -72,9 +69,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0a795b0a2123ccc7b895c3dd887cf81bbab81ff36769dcdee7600a0c050d6c75"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
