--- a/bird_classifier_2.0.ipynb
+++ b/bird_classifier_2.0.ipynb
@@ -2,19 +2,169 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fastai"
+    "from fastai.vision.all import *\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path(\"dataset\")\n",
+    "\n",
+    "dls = DataBlock(\n",
+    "    blocks=(ImageBlock, CategoryBlock),\n",
+    "    get_items=get_image_files,\n",
+    "    splitter=RandomSplitter(valid_pct=0.2, seed=42),\n",
+    "    get_y=parent_label,\n",
+    "    item_tfms=Resize(128)\n",
+    ").dataloaders(path, bs=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1.696074</td>\n",
+       "      <td>1.345365</td>\n",
+       "      <td>0.571672</td>\n",
+       "      <td>02:47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.319827</td>\n",
+       "      <td>0.961369</td>\n",
+       "      <td>0.663823</td>\n",
+       "      <td>02:57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.958730</td>\n",
+       "      <td>0.774100</td>\n",
+       "      <td>0.709898</td>\n",
+       "      <td>01:49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.695427</td>\n",
+       "      <td>0.772963</td>\n",
+       "      <td>0.711604</td>\n",
+       "      <td>01:49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "learn = cnn_learner(dls, resnet34, metrics=accuracy)\n",
+    "learn.fine_tune(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.export(\"bird_classifier.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grønnsisik\n",
+      "TensorBase(3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_prediction = PILImage.create(\"test/white-troated dipper.png\")\n",
+    "resized_img = Resize(128)(img_prediction)\n",
+    "pred_label, pred_prob, pred_output = learn.predict(img_prediction)\n",
+    "\n",
+    "print(pred_label)  # predicted label\n",
+    "pred_probs = softmax(pred_output, dim=0)\n",
+    "print(pred_probs)  # predicted probabilities"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0a795b0a2123ccc7b895c3dd887cf81bbab81ff36769dcdee7600a0c050d6c75"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
