--- a/bird_classifier_2.0.ipynb
+++ b/bird_classifier_2.0.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
     "    get_items=get_image_files,\n",
     "    splitter=RandomSplitter(valid_pct=0.2, seed=42),\n",
     "    get_y=parent_label,\n",
-    "    item_tfms=Resize(128)\n",
+    "    item_tfms=Resize(256)\n",
     ").dataloaders(path, bs=32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -48,31 +48,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1.696074</td>\n",
-       "      <td>1.345365</td>\n",
-       "      <td>0.571672</td>\n",
-       "      <td>02:47</td>\n",
+       "      <td>1.431893</td>\n",
+       "      <td>1.128248</td>\n",
+       "      <td>0.600683</td>\n",
+       "      <td>00:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1.319827</td>\n",
-       "      <td>0.961369</td>\n",
-       "      <td>0.663823</td>\n",
-       "      <td>02:57</td>\n",
+       "      <td>1.224140</td>\n",
+       "      <td>0.975600</td>\n",
+       "      <td>0.687713</td>\n",
+       "      <td>00:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.958730</td>\n",
-       "      <td>0.774100</td>\n",
-       "      <td>0.709898</td>\n",
-       "      <td>01:49</td>\n",
+       "      <td>0.992660</td>\n",
+       "      <td>0.801402</td>\n",
+       "      <td>0.747440</td>\n",
+       "      <td>01:09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.695427</td>\n",
-       "      <td>0.772963</td>\n",
-       "      <td>0.711604</td>\n",
-       "      <td>01:49</td>\n",
+       "      <td>0.806714</td>\n",
+       "      <td>0.763882</td>\n",
+       "      <td>0.749147</td>\n",
+       "      <td>01:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.729379</td>\n",
+       "      <td>0.754388</td>\n",
+       "      <td>0.745734</td>\n",
+       "      <td>00:55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -86,29 +93,31 @@
     }
    ],
    "source": [
-    "learn = cnn_learner(dls, resnet34, metrics=accuracy)\n",
-    "learn.fine_tune(4)"
+    "learn = cnn_learner(dls, alexnet, metrics=accuracy)\n",
+    "learn.fine_tune(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.export(\"bird_classifier.pkl\")"
+    "learn.export(\"bird_classifier_2.0.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "learn = load_learner(\"bird_classifier.pkl\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +135,7 @@
      "output_type": "stream",
      "text": [
       "Grønnsisik\n",
-      "TensorBase(3)\n"
+      "TensorBase([0.1180, 0.1188, 0.1233, 0.2810, 0.1175, 0.1186, 0.1228])\n"
      ]
     }
    ],
@@ -135,8 +144,10 @@
     "resized_img = Resize(128)(img_prediction)\n",
     "pred_label, pred_prob, pred_output = learn.predict(img_prediction)\n",
     "\n",
+    "import torch.nn.functional as F\n",
+    "\n",
     "print(pred_label)  # predicted label\n",
-    "pred_probs = softmax(pred_output, dim=0)\n",
+    "pred_probs = F.softmax(pred_output, dim=0)\n",
     "print(pred_probs)  # predicted probabilities"
    ]
   }
