--- a/bird_classifier_fastai.ipynb
+++ b/bird_classifier_fastai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\antont\\Anaconda3\\lib\\site-packages\\fastai\\vision\\learner.py:288: UserWarning: `cnn_learner` has been renamed to `vision_learner` -- please update your code\n",
+      "  warn(\"`cnn_learner` has been renamed to `vision_learner` -- please update your code\")\n",
+      "c:\\Users\\antont\\Anaconda3\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\antont\\Anaconda3\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=DenseNet201_Weights.IMAGENET1K_V1`. You can also use `weights=DenseNet201_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/densenet201-c1103571.pth\" to C:\\Users\\antont/.cache\\torch\\hub\\checkpoints\\densenet201-c1103571.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b4c52859eda491488afccca6215d47f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0.00/77.4M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<fastai.learner.Learner at 0x24f996d3760>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learn = cnn_learner(dls, alexnet, metrics=accuracy)\n",
+    "\n",
+    "# Set the learner to use the GPU\n",
+    "learn.to_fp16() # Use mixed-precision training for faster training\n",
+    "\n",
+    "\n",
+    "learn.fit_one_cycle(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -48,38 +101,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2.056531</td>\n",
-       "      <td>2.057692</td>\n",
-       "      <td>0.484716</td>\n",
-       "      <td>01:10</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1.692916</td>\n",
-       "      <td>1.995038</td>\n",
-       "      <td>0.541485</td>\n",
-       "      <td>01:03</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1.378879</td>\n",
-       "      <td>1.609902</td>\n",
-       "      <td>0.567686</td>\n",
-       "      <td>01:08</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.993660</td>\n",
-       "      <td>1.546046</td>\n",
-       "      <td>0.598253</td>\n",
-       "      <td>01:09</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.703103</td>\n",
-       "      <td>1.484660</td>\n",
-       "      <td>0.598253</td>\n",
-       "      <td>01:10</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -93,13 +146,83 @@
     }
    ],
    "source": [
-    "learn = cnn_learner(dls, resnet50, metrics=accuracy)\n",
+    "#Train model\n",
+    "learn.fit_one_cycle(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Fine tune model\n",
     "learn.fine_tune(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +239,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.484660029411316\n",
-      "0.5982532501220703\n"
+      "None\n",
+      "None\n"
      ]
     }
    ],
@@ -129,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.export(\"bird_classifier_4.0.pkl\")"
+    "#learn.export(\"bird_classifier_8.0.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "CATEGORIES = [\"Blåmeis\", \"Dompap\", \"Fossekall\", \"Granmeis\", \"Gråspurv\", \"Grønnfink\", \"Grønnsisik\", \"Kjøttmeis\", \"Kråke\", \"Nøtteskrike\", \"Pilfink\"]\n",
+    "\n",
+    "def classify_img(img):\n",
+    "    perd,idc,probs = learn.predict(img)\n",
+    "    return dict(zip(CATEGORIES, map(float, probs)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,23 +298,78 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction for 'white-troated dipper.png':\n",
-      "Class: Fossekall\n",
-      "Probability: 0.5718\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Blåmeis': 0.9524635076522827,\n",
+       " 'Dompap': 0.0001617397356312722,\n",
+       " 'Fossekall': 0.0058466303162276745,\n",
+       " 'Granmeis': 0.0007062837830744684,\n",
+       " 'Gråspurv': 0.003648633137345314,\n",
+       " 'Grønnfink': 0.006871369667351246,\n",
+       " 'Grønnsisik': 0.00019620217790361494,\n",
+       " 'Kjøttmeis': 0.0010726398322731256,\n",
+       " 'Kråke': 0.0009010302601382136,\n",
+       " 'Nøtteskrike': 0.007425394374877214,\n",
+       " 'Pilfink': 0.020706508308649063}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "prediction = learn.predict('test/white-troated dipper.png')\n",
+    "classify_img('test/img/blåmeis.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\antont\\Anaconda3\\lib\\site-packages\\gradio\\inputs.py:257: UserWarning: Usage of gradio.inputs is deprecated, and will not be supported in the future, please import your component from gradio.components\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\antont\\Anaconda3\\lib\\site-packages\\gradio\\deprecation.py:40: UserWarning: `optional` parameter is deprecated, and it has no effect\n",
+      "  warnings.warn(value)\n",
+      "c:\\Users\\antont\\Anaconda3\\lib\\site-packages\\gradio\\outputs.py:197: UserWarning: Usage of gradio.outputs is deprecated, and will not be supported in the future, please import your components from gradio.components\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\antont\\Anaconda3\\lib\\site-packages\\gradio\\deprecation.py:40: UserWarning: The 'type' parameter has been deprecated. Use the Number component instead.\n",
+      "  warnings.warn(value)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7863\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gradio as gr\n",
+    "image = gr.inputs.Image(shape=(128,128))\n",
+    "label = gr.outputs.Label()\n",
     "\n",
-    "# Print the prediction results\n",
-    "print(f\"Prediction for 'white-troated dipper.png':\")\n",
-    "print(f\"Class: {prediction[0]}\")\n",
-    "print(f\"Probability: {prediction[2][prediction[1]].item():.4f}\")\n",
-    "\n"
+    "path = \"test/img/\"\n",
+    "\n",
+    "EXAMPLES = [path+\"blåmeis.png\", path+\"fossekall.png\", path+\"dompap.png\", path+\"granmeis.png\", path+\"gråspurv.png\", path+\"grønnfink.png\", path+\"kråke.png\"]\n",
+    "\n",
+    "intf = gr.Interface(fn=classify_img, inputs=image, outputs=label, examples=EXAMPLES)\n",
+    "intf.launch(inline=False)"
    ]
   }
  ],
