--- a/convert_single_wav_to_single_img.ipynb
+++ b/convert_single_wav_to_single_img.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import librosa\n",
-    "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "import numpy as np\n",
-    "import io"
+    "import io\n",
+    "import wave\n",
+    "import os\n",
+    "import librosa\n"
    ]
   },
   {
@@ -21,8 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wave\n",
-    "import os\n",
     "\n",
     "def count_wav_files(input_folder):\n",
     "    count = 0\n",
@@ -97,11 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "create_spectrogram(\"test/white-troated dipper.wav\", \"test\")"
+    "create_spectrogram(\"test/wav/kråke.wav\", \"test/img\")"
    ]
   }
  ],
